# Silex

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_COMPLETE.md  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
data/: easy_nulls_clean.csv  easy_nulls_dirty.csv  hard_multitable_clean.csv  hard_multitable_dirty.csv  medium_formats_clean.csv  medium_formats_dirty.csv
server/: app.py  environment.py  graders.py
