[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "OpenEnv environment for real-world data cleaning tasks"
requires-python = ">=3.11"
authors = [
    {name = "Waryjustice", email = ""}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
